# scaffold

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: agents.yaml  governance.yaml  project.yaml
config/projects/: inkwell.yaml
db/: schema.sql
docs/: agents.md  architecture.md  cli.md  configuration.md
docs/superpowers/plans/: 2026-05-08-agentic-scaffold.md  2026-05-08-scaffold-hardening.md  2026-05-09-agent-redesign.md  2026-05-11-scaffold-init.md  (+2 more)
orchestrator/: __main__.py  agent_loader.py  budget.py  config.py  db.py  dispatcher.py  event_bus.py  graph.py  init.py  json_utils.py  preflight.py  router.py  self_heal.py  state.py  task_tree.py  telegram.py  telemetry.py
orchestrator/nodes/: architect.py  base.py  consensus.py  designer.py  developer.py  human_gate.py  onboarding.py  product_owner.py  qa.py  reviewer.py
prompts/: architect.md  designer.md  developer.md  product_owner.md  qa.md  reviewer.md
tests/: conftest.py  test_advisor_base.py  test_agent_loader.py  test_architect.py  test_budget.py  test_cli.py  test_config.py  test_consensus.py  test_db.py  test_designer.py  test_developer.py  test_dispatcher.py  test_doer_base.py  test_event_bus.py  test_graph.py  test_human_gate.py  test_init.py  test_json_utils.py  test_onboarding.py  test_preflight.py  test_product_owner.py  test_qa.py  test_reviewer.py  test_router.py  test_self_heal.py  test_state.py  test_task_tree.py  test_telegram.py  test_telemetry.py  test_worktree_reuse.py
(+48 files in other folders)
